add: MainActivity.kt

--- a/viewmodel/src/main/AndroidManifest.xml
+++ b/viewmodel/src/main/AndroidManifest.xml
@@ -9,15 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Playground">
-        <activity android:name=".greeting.GreetingActivity">
+        <activity android:name=".calculator.CalculatorActivity"></activity>
+        <activity android:name=".greeting.GreetingActivity" />
+        <activity android:name=".main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".main.MainActivity">
-
         </activity>
     </application>
 
