--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,30 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.5.20"
+
+    ext {
+        kotlin_version = "1.5.20"
+        appcompat = "1.3.0"
+        core_ktx = "1.5.0"
+        material = "1.3.0"
+        constraintlayout = "2.0.4"
+    }
+    
     repositories {
         google()
         mavenCentral()
     }
+
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
+
 }
 
 allprojects {
     repositories {
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
     }
 }
 
