--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         core_ktx = "1.5.0"
         material = "1.3.0"
         constraintlayout = "2.0.4"
+        koin_version= "3.1.1"
     }
     
     repositories {
