--- a/koin/build.gradle
+++ b/koin/build.gradle
@@ -1,12 +1,32 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
 
-    buildFeatures {
-        viewBinding = true
+    def appName = "koin"
+    def projectApplicationId = "$appDomain.$appDevConsole.$appName"
+
+    compileSdkVersion projectCompileSdkVersion
+    buildToolsVersion projectBuildToolsVersion
+
+    defaultConfig {
+        applicationId projectApplicationId
+        minSdkVersion projectMinSdkVersion
+        targetSdkVersion projectTargetSdkVersion
+        versionCode projectVersionCode
+        versionName projectVersionName
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
     }
 
     compileOptions {
@@ -18,24 +38,8 @@ android {
         jvmTarget = '1.8'
     }
 
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
-
-    defaultConfig {
-        applicationId "com.frogobox.koin"
-        minSdkVersion 21
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
+    buildFeatures {
+        viewBinding = true
     }
 
 }
@@ -61,9 +65,9 @@ dependencies {
     implementation "io.insert-koin:koin-androidx-workmanager:$koin_version" // Koin for Jetpack WorkManager
     implementation "io.insert-koin:koin-androidx-compose:$koin_version" // Koin for Jetpack Compose
 
-    testImplementation 'junit:junit:4.13.2'
     testImplementation "io.insert-koin:koin-test:$koin_version" // Koin test features
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation "junit:junit:$test_junit"
+    androidTestImplementation "androidx.test.ext:junit:$android_test_junit"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$android_test_espresso"
 
 }
