--- a/build.gradle
+++ b/build.gradle
@@ -18,15 +18,26 @@ buildscript {
         projectVersionName = "$versionMajor.$versionMinor.$versionPatch"
 
         kotlin_version = "1.5.21"
+
         appcompat = "1.3.0"
         core_ktx = "1.6.0"
         material = "1.4.0"
         constraintlayout = "2.0.4"
+
+        androidx_activity_ktx = "1.2.3"
+        androidx_lifecycle_viewmodel_ktx = "2.3.1"
+        androidx_legacy_support_v4 = "1.0.0"
+
         koin_version = "3.1.1"
+
+        test_mockito = "3.9.0"
 
         test_junit = "4.13.2"
         android_test_junit = "1.1.3"
         android_test_espresso = "3.4.0"
+        android_test_rules = "1.4.0"
+        android_test_runner = "1.4.0"
+
 
     }
 
