--- a/koin/build.gradle
+++ b/koin/build.gradle
@@ -49,13 +49,13 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.core:core-ktx:$core_ktx"
     implementation "androidx.appcompat:appcompat:$appcompat"
-    implementation "com.google.android.material:material:$material"
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayout"
     implementation "androidx.recyclerview:recyclerview:1.2.1"
+    implementation "androidx.activity:activity-ktx:$androidx_activity_ktx"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$androidx_lifecycle_viewmodel_ktx"
+    implementation "androidx.legacy:legacy-support-v4:$androidx_legacy_support_v4"
 
-    implementation 'androidx.activity:activity-ktx:1.2.3'
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "com.google.android.material:material:$material"
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
