--- a/testing/build.gradle
+++ b/testing/build.gradle
@@ -49,16 +49,16 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.core:core-ktx:$core_ktx"
     implementation "androidx.appcompat:appcompat:$appcompat"
-    implementation "com.google.android.material:material:$material"
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayout"
 
-    testImplementation 'org.mockito:mockito-core:3.9.0'
-    testImplementation 'org.mockito:mockito-inline:3.9.0'
+    implementation "com.google.android.material:material:$material"
+
+    testImplementation "org.mockito:mockito-core:$test_mockito"
+    testImplementation "org.mockito:mockito-inline:$test_mockito"
     testImplementation "junit:junit:$test_junit"
 
-    androidTestImplementation 'androidx.test:rules:1.4.0'
-    androidTestImplementation 'androidx.test:runner:1.4.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation "androidx.test:rules:$android_test_rules"
+    androidTestImplementation "androidx.test:runner:$android_test_runner"
     androidTestImplementation "androidx.test.ext:junit:$android_test_junit"
     androidTestImplementation "androidx.test.espresso:espresso-core:$android_test_espresso"
 }
