--- a/viewmodel/build.gradle
+++ b/viewmodel/build.gradle
@@ -49,12 +49,12 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.core:core-ktx:$core_ktx"
     implementation "androidx.appcompat:appcompat:$appcompat"
-    implementation "com.google.android.material:material:$material"
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayout"
+    implementation "androidx.activity:activity-ktx:$androidx_activity_ktx"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$androidx_lifecycle_viewmodel_ktx"
+    implementation "androidx.legacy:legacy-support-v4:$androidx_legacy_support_v4"
 
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
-    implementation "androidx.activity:activity-ktx:1.2.3"
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "com.google.android.material:material:$material"
 
     testImplementation "junit:junit:$test_junit"
     androidTestImplementation "androidx.test.ext:junit:$android_test_junit"
