--- a/build.gradle
+++ b/build.gradle
@@ -17,14 +17,14 @@ buildscript {
         projectVersionCode = (versionMajor * 100) + (versionMinor * 10) + (versionPatch * 1)
         projectVersionName = "$versionMajor.$versionMinor.$versionPatch"
 
-        kotlin_version = "1.5.21"
+        kotlin_version = "1.5.10"
 
-        appcompat = "1.3.0"
+        appcompat = "1.3.1"
         core_ktx = "1.6.0"
         material = "1.4.0"
         constraintlayout = "2.0.4"
 
-        androidx_activity_ktx = "1.2.3"
+        androidx_activity_ktx = "1.3.0"
         androidx_lifecycle_viewmodel_ktx = "2.3.1"
         androidx_legacy_support_v4 = "1.0.0"
 
@@ -37,6 +37,7 @@ buildscript {
         android_test_espresso = "3.4.0"
         android_test_rules = "1.4.0"
         android_test_runner = "1.4.0"
+        compose_version = '1.0.0'
 
 
     }
@@ -47,7 +48,7 @@ buildscript {
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.2"
+        classpath 'com.android.tools.build:gradle:7.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 
