--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
+        classpath 'com.google.gms:google-services:4.3.8'
     }
 
 }
