--- a/build.gradle
+++ b/build.gradle
@@ -17,14 +17,14 @@ buildscript {
         projectVersionCode = (versionMajor * 100) + (versionMinor * 10) + (versionPatch * 1)
         projectVersionName = "$versionMajor.$versionMinor.$versionPatch"
 
-        kotlin_version = "1.5.10"
+        kotlin_version = "1.5.21"
 
         appcompat = "1.3.1"
         core_ktx = "1.6.0"
         material = "1.4.0"
-        constraintlayout = "2.0.4"
+        constraintlayout = "2.1.0"
 
-        androidx_activity_ktx = "1.3.0"
+        androidx_activity_ktx = "1.3.1"
         androidx_lifecycle_viewmodel_ktx = "2.3.1"
         androidx_legacy_support_v4 = "1.0.0"
 
@@ -37,8 +37,7 @@ buildscript {
         android_test_espresso = "3.4.0"
         android_test_rules = "1.4.0"
         android_test_runner = "1.4.0"
-        compose_version = '1.0.0'
-
+        compose_version = '1.0.1'
 
     }
 
@@ -49,8 +48,8 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
-        classpath 'com.google.gms:google-services:4.3.8'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.3.10'
     }
 
 }
