--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,9 @@ buildscript {
         versionMinor = 0
         versionPatch = 0
 
-        projectCompileSdkVersion = 30
-        projectBuildToolsVersion = "30.0.3"
-        projectMinSdkVersion = 21
-        projectTargetSdkVersion = projectCompileSdkVersion
+        projectCompileSdk = 31
+        projectMinSdk = 21
+        projectTargetSdk = projectCompileSdk
 
         appDomain = "com"
         appDevConsole = "frogobox"
@@ -47,7 +46,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.0'
+        classpath 'com.android.tools.build:gradle:7.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.10'
     }
