--- a/compose/build.gradle
+++ b/compose/build.gradle
@@ -8,19 +8,21 @@ android {
     def appName = "compose"
     def projectApplicationId = "$appDomain.$appDevConsole.$appName"
 
-    compileSdk projectCompileSdkVersion
+    compileSdk projectCompileSdk
 
     defaultConfig {
         applicationId projectApplicationId
-        minSdk projectMinSdkVersion
-        targetSdk projectTargetSdkVersion
+        minSdk projectMinSdk
+        targetSdk projectTargetSdk
         versionCode projectVersionCode
         versionName projectVersionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
         vectorDrawables {
             useSupportLibrary true
         }
+
     }
 
     buildTypes {
@@ -29,21 +31,27 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
+
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_11.toString()
         useIR = true
     }
+
     buildFeatures {
         compose true
+        viewBinding true
     }
+
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
         kotlinCompilerVersion kotlin_version
     }
+
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
