add: tutorial Column Jetpack compose

--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ buildscript {
         android_test_espresso = "3.4.0"
         android_test_rules = "1.4.0"
         android_test_runner = "1.4.0"
-        compose_version = '1.0.1'
+        compose_version = "1.0.2"
 
     }
 
