--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 
