--- a/build.gradle
+++ b/build.gradle
@@ -18,16 +18,16 @@ buildscript {
 
         kotlin_version = "1.5.31"
 
-        appcompat = "1.3.1"
+        appcompat = "1.4.1"
         core_ktx = "1.7.0"
-        material = "1.4.0"
-        constraintlayout = "2.1.1"
+        material = "1.5.0"
+        constraintlayout = "2.1.3"
 
         androidx_activity_ktx = "1.4.0"
         androidx_lifecycle_viewmodel_ktx = "2.4.0"
         androidx_legacy_support_v4 = "1.0.0"
 
-        koin_version = "3.1.1"
+        koin_version = "3.1.4"
 
         test_mockito = "3.9.0"
 
@@ -36,7 +36,7 @@ buildscript {
         android_test_espresso = "3.4.0"
         android_test_rules = "1.4.0"
         android_test_runner = "1.4.0"
-        compose_version = "1.0.4"
+        compose_version = "1.1.1"
 
     }
 
@@ -46,9 +46,9 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.3'
+        classpath "com.android.tools.build:gradle:7.1.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.3.10'
+        classpath "com.google.gms:google-services:4.3.10"
     }
 
 }
@@ -57,7 +57,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        maven { url 'https://jitpack.io' }
+        maven { url "https://jitpack.io" }
     }
 }
 
