--- a/dagger/build.gradle
+++ b/dagger/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-    id 'kotlin-kapt'
+    id "com.android.application"
+    id "kotlin-android"
+    id "kotlin-kapt"
 }
 
 android {
@@ -24,7 +24,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
         }
     }
 
@@ -52,8 +52,8 @@ dependencies {
 
     implementation "com.google.android.material:material:$material"
 
-    api 'com.google.dagger:dagger:2.38.1'
-    kapt 'com.google.dagger:dagger-compiler:2.37'
+    api "com.google.dagger:dagger:2.38.1"
+    kapt "com.google.dagger:dagger-compiler:2.37"
 
     testImplementation "junit:junit:$test_junit"
     androidTestImplementation "androidx.test.ext:junit:$android_test_junit"
