--- a/firebase/build.gradle
+++ b/firebase/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-    id 'com.google.gms.google-services'
+    id "com.android.application"
+    id "kotlin-android"
+    id "com.google.gms.google-services"
 }
 
 android {
@@ -25,7 +25,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
         }
     }
 
@@ -55,17 +55,17 @@ dependencies {
     implementation "com.google.android.material:material:$material"
 
     // Import the Firebase BoM
-    implementation platform('com.google.firebase:firebase-bom:28.2.1')
+    implementation platform("com.google.firebase:firebase-bom:28.2.1")
 
-    // When using the BoM, you don't specify versions in Firebase library dependencies
+    // When using the BoM, you don"t specify versions in Firebase library dependencies
 
     // Declare the dependency for the Firebase SDK for Google Analytics
-    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation "com.google.firebase:firebase-analytics-ktx"
 
     // Declare the dependencies for any other desired Firebase products
     // For example, declare the dependencies for Firebase Authentication and Cloud Firestore
-    implementation 'com.google.firebase:firebase-auth-ktx'
-    implementation 'com.google.firebase:firebase-firestore-ktx'
+    implementation "com.google.firebase:firebase-auth-ktx"
+    implementation "com.google.firebase:firebase-firestore-ktx"
 
     testImplementation "junit:junit:$test_junit"
     androidTestImplementation "androidx.test.ext:junit:$android_test_junit"
