--- a/viewmodel/src/main/AndroidManifest.xml
+++ b/viewmodel/src/main/AndroidManifest.xml
@@ -9,9 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Playground">
-        <activity android:name=".calculator.CalculatorActivity"></activity>
+        <activity android:name=".calculator.CalculatorActivity" />
         <activity android:name=".greeting.GreetingActivity" />
-        <activity android:name=".main.MainActivity">
+        <activity
+            android:name=".main.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
